Getting bored already

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Getting Sassy</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-
+    <h1>Getting Sassy</h1>
+    <div class="card">
+        <div class="card-header">
+            Will he?
+        </div>
+        <div class="card-body">
+            <div class="card-image"><img src="./images/my head transparent.png" alt="dave"></div>
+            <div class="card-details">Dave Collison</div>
+        </div>
+        <div class="card-footer">Yes</div>
+    </div>
 </body>
 
 </html>
