got card working with half transparent profile pic

--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
 </head>
 
 <body>
-    <h1>Getting Sassy</h1>
-    <div class="card">
-        <div class="card-header">
-            Will he?
+    <div class="wrapper center">
+        <h1>Getting Sassy</h1>
+        <div class="card">
+            <div class="card-header">
+                Will he?
+            </div>
+            <div class="card-body">
+                <div class="card-image-container">
+                    <div class="card-image-inner">
+                        <img src="./images/my head transparent.png" alt="dave">
+                    </div>
+                </div>
+                <div class="card-details">Dave R B Collison</div>
+            </div>
+            <div class="card-footer">Yes</div>
         </div>
-        <div class="card-body">
-            <div class="card-image"><img src="./images/my head transparent.png" alt="dave"></div>
-            <div class="card-details">Dave Collison</div>
-        </div>
-        <div class="card-footer">Yes</div>
     </div>
 </body>
 
