add gradients and shadows

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Getting Sassy</h1>
         <div class="card">
             <div class="card-header">
-                Will he?
+                <h2>Dave COllison</h2>
             </div>
             <div class="card-body">
                 <div class="card-image-container">
@@ -21,9 +21,9 @@
                         <img src="./images/my head transparent.png" alt="dave">
                     </div>
                 </div>
-                <div class="card-details">Dave R B Collison</div>
+                <div class="card-details">Why the big O?</div>
             </div>
-            <div class="card-footer">Yes</div>
+            <div class="card-footer">&copy; 2020 Dave Collison</div>
         </div>
     </div>
 </body>
